# fm-mcp-comfyui-bridge

./: .gitignore  README.md  README_custom_workflow.md  main.py  pyproject.toml
example/: custom.yaml
example/workflow/: flux1-dev-API.json  flux1-dev.json
src/fm_mcp_comfyui_bridge/: __init__.py  comfyui_bridge.py  main.py  ollama_caption.py
src/fm_mcp_comfyui_bridge/config/: ollama.yaml  sample_config.yaml  sample_lora.yaml
