[project]
name = "fm-mcp-comfyui-bridge"
version = "0.2.0"
description = "ComfyUI Bridge MCP"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
    "huggingface-hub>=0.25.2",
    "numpy>=2.1.2",
    "ollama>=0.3.3",
    "onnxruntime>=1.19.2",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
]

[[project.authors]]
name = "rerofumi"
email = "rero2@yuumu.org"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
fm-mcp-comfyui-bridge = "fm_mcp_comfyui_bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fm_mcp_comfyui_bridge"]
